Day_23/kyverno/pod-with-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-root-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.21
      securityContext:
        runAsNonRoot: false
